test/errors/init_missing.trm
machine Error

states: q1
accept: q1
init: q0
tapes: 1 10 ""

q0 | '_' | q0 |  ?  | ?
q0 | 'q' | q1 | 'q' | =

end